--- a/legoCV_ws/src/computer_vision/CMakeLists.txt
+++ b/legoCV_ws/src/computer_vision/CMakeLists.txt
@@ -165,9 +165,10 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
  catkin_install_python(PROGRAMS
    scripts/data_node.py 
-   scripts/matcher_node.py
+   scripts/ActivationTest/activation_node.py
    scripts/tracker_node.py 
    scripts/video_saver_node.py
+   scripts/setup_node.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
