--- a/legoCV_ws/src/computer_vision/CMakeLists.txt
+++ b/legoCV_ws/src/computer_vision/CMakeLists.txt
@@ -47,14 +47,14 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * uncomment the add_*_files sections below as needed
 ##     and list every .msg/.srv/.action file to be processed
 ##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
+##   * add every package in MSG_DEP_SET to generate_messages(DEPENDSENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+ add_message_files(
+   FILES
+   ProjectInfo.msg
+   RoiList.msg
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -106,11 +106,11 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES computer_vision
-#  CATKIN_DEPENDS roscpp rospy std_msgs
-#  DEPENDS system_lib
-CATKIN_DEPENDS message_runtime
+  #INCLUDE_DIRS include
+  #LIBRARIES computer_vision
+  CATKIN_DEPENDS roscpp rospy std_msgs 
+  #DEPENDS system_lib
+#CATKIN_DEPENDS message_runtime
 )
 
 ###########
@@ -164,11 +164,11 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
  catkin_install_python(PROGRAMS
-   scripts/data_node.py 
-   scripts/ActivationTest/activation_node.py
-   scripts/tracker_node.py 
-   scripts/video_saver_node.py
-   scripts/setup_node.py
+   scripts/Nodes/project_setup_node.py
+   scripts/Nodes/activation_node.py
+   scripts/Nodes/tracker_node.py 
+   scripts/Nodes/video_saver_node.py
+   scripts/Nodes/data_node.py 
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
