--- a/legoCV_ws/src/computer_vision/CMakeLists.txt
+++ b/legoCV_ws/src/computer_vision/CMakeLists.txt
@@ -57,11 +57,10 @@ find_package(catkin REQUIRED COMPONENTS
  )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+ add_service_files(
+   FILES
+   Robo.srv
+ )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -169,6 +168,7 @@ include_directories(
    scripts/Nodes/tracker_node.py 
    scripts/Nodes/video_saver_node.py
    scripts/Nodes/data_node.py 
+   scripts/Nodes/ur_node.py 
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
