AT is ready to be tested

--- a/legoCV_ws/src/computer_vision/CMakeLists.txt
+++ b/legoCV_ws/src/computer_vision/CMakeLists.txt
@@ -52,7 +52,8 @@ catkin_python_setup()
 ## Generate messages in the 'msg' folder
  add_message_files(
    FILES
-   ProjectInfo.msg
+   ActivationTestInfo.msg
+   MotionTrackerInfo.msg
    RoiList.msg
  )
 
